# OmniSight

./: .env.example  .gitattributes  .gitignore  ACHIEVEMENTS.md  ADMIN_RESET.md  CHANGELOG.md  Dockerfile  LICENSE  PROJECT_DOCUMENTATION.md  README.md  ROADMAP.md  WIDEVINE_CASTLABS_SETUP.md  compose.yml  package-lock.json  package.json  svelte.config.js  vite.config.ts
.github/: dependabot.yml
.github/workflows/: build.yml  deps-info.yml  draft-release.yml  release.yml
graphalion-out/: REPORT.md  graph.html  graph.json
scripts/: build-bundle.js  bump-version.js  create-cert.ps1  fuses.js  generate-icons.js
server/: auth.mjs  auth.test.mjs  index.mjs
src/: app.css  app.html  index.html  main.js  preload.js  splash.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/extensions/: README.md
src-tauri/extensions_twitch/: README.md
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: anilist.rs  audio_session.rs  discord.rs  favicon.rs  lib.rs  main.rs  tmdb.rs
src-tauri/src/commands/: achievements.rs  mod.rs  notifications.rs  profiles.rs  sessions.rs  settings.rs  streaming.rs  system.rs  tmdb.rs
src/css/: style.css
src/js/: app.js  bundle.js  fixes.js  tauri-bridge.js
src/js/core/: achievements.js  i18n.js  providers.js
src/js/features/: feedback.js  widevine.js
src/js/ui/: notifications.js  search.js
src/lib/: anilist.ts  avatar.ts  backup.ts  embedded.ts  i18n.ts  native.ts  persistence.ts  platform.ts  providerVisual.ts  streamWindow.ts  themes.ts  tmdb.ts  toastIcons.ts  version.ts  watchProviders.ts  watchlistExport.ts  watchlistImport.test.ts  watchlistImport.ts  yearReview.ts
src/lib/components/: AddProviderModal.svelte  CardEditorModal.svelte  Clock.svelte  CollectionsModal.svelte  CommandPalette.svelte  DiscordPresence.svelte  GlobalSearchModal.svelte  HiddenTitlesModal.svelte  Logo.svelte  MediaBrowser.svelte  MiniPlayer.svelte  NotificationCenter.svelte  OnboardingModal.svelte  Particles.svelte  PosterRowSkeleton.svelte  ProfileSwitcher.svelte  ProviderCard.svelte  SeenTitlesModal.svelte  SettingsModal.svelte  ShortcutsModal.svelte  Sidebar.svelte  SleepCountdown.svelte  SleepTimer.svelte  SplashScreen.svelte  StreamsTray.svelte  TitleInfoModal.svelte  Titlebar.svelte  Toasts.svelte  UpdateBanner.svelte  WrappedModal.svelte  YearReviewBanner.svelte
src/lib/data/: providers.ts
src/lib/stores/: accounts.ts  achievements.ts  continue.ts  episodeProgress.test.ts  episodeProgress.ts  favicons.ts  hidden.ts  profiles.test.ts  profiles.ts  providers.ts  reachability.ts  recs.ts  searchHistory.ts  settings.ts  toasts.ts  tracking.ts  updater.ts  watchlist.ts
src/lib/types/: index.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/cr-calendar/: +page.svelte
src/routes/history/: +page.svelte
src/routes/news/: +page.svelte
src/routes/provider/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/stats/: +page.svelte
src/routes/stream/: +page.svelte
src/routes/upcoming/: +page.svelte
src/routes/watchlist/: +page.svelte
