[package]
name = "omnihub"
version = "0.31.0"
description = "OmniHub – zentraler Streaming-Hub"
authors = ["P3rc1v4l"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "omnihub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
urlencoding = "2"
discord-rich-presence = "1.1.0"
base64 = "0.22"

[features]
custom-protocol = ["tauri/custom-protocol"]
