[package]
name = "omnisight"
version = "0.101.0"
description = "OmniSight – zentraler Streaming-Hub"
authors = ["P3rc1v4l"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "omnisight_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable", "devtools", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
urlencoding = "2"
discord-rich-presence = "1.1.0"
base64 = "0.22"

# Windows-spezifisch: direkter WebView2-COM-Zugriff für Passwort-Autofill.
# Versionen exakt passend zu wry/Tauri (aus Cargo.lock), sonst Typ-Konflikte.
[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_Media_Audio",
  "Win32_System_Diagnostics_ToolHelp",
] }

[features]
custom-protocol = ["tauri/custom-protocol"]
